# tgbot

./: .dockerignore  .gitignore  README.md  config.py  db.py  dispatcher.py  main.py  patches.py  pyproject.toml  requirements.txt  run.py  utils.py
app/: db.py  dispatcher.py  logs.py  main.py  patches.py  utils.py
app/game/: bot_commands.py  dto.py  endpoints.py
game/: bot_commands.py  dto.py  endpoints.py
game-deploy/: Dockerfile  docker-compose.yaml
